# MiniGPT-4

./: demo.py  demo_v2.py  generate_hat_captions.py  lvis1.py  lvis2.py  main.py  pyproject.toml  requirements.txt  train.py
eval_configs/: minigpt4_eval.yaml  minigpt4_llama2_eval.yaml
eval_scripts/: eval_ref.py  eval_vqa.py
minigpt4/: __init__.py
minigpt4/common/: config.py  dist_utils.py  eval_utils.py  logger.py  optims.py  registry.py  utils.py
minigpt4/common/vqa_tools/: __init__.py  vqa.py  vqa_eval.py
minigpt4/common/vqa_tools/VQA/PythonEvaluationTools/: vqaEvalDemo.py
minigpt4/common/vqa_tools/VQA/PythonHelperTools/: vqaDemo.py
minigpt4/configs/models/: minigpt4_llama2.yaml
minigpt4/conversation/: conversation.py
minigpt4/datasets/: data_utils.py
minigpt4/datasets/builders/: __init__.py  base_dataset_builder.py  image_text_pair_builder.py
minigpt4/datasets/datasets/: aok_vqa_datasets.py  base_dataset.py  caption_datasets.py  cc_sbu_dataset.py  coco_caption.py  coco_dataset.py  coco_vqa_datasets.py  dataloader_utils.py  flickr.py  gqa_datasets.py  laion_dataset.py  llava_dataset.py  multitask_conversation.py  ocrvqa_dataset.py  text_caps.py  unnatural_instruction.py  vg_dataset.py  vqa_datasets.py
minigpt4/models/: Qformer.py  __init__.py  base_model.py  eva_vit.py  minigpt4.py  minigpt_base.py  minigpt_v2.py  modeling_llama.py
minigpt4/processors/: __init__.py  blip_processors.py  randaugment.py
minigpt4/runners/: __init__.py  runner_base.py
minigpt4/tasks/: __init__.py  base_task.py  image_text_pretrain.py
(+3 files in other folders)
