[project]
name = "minigpt-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
    "decord>=0.6.0",
    "gradio>=4.44.1",
    "huggingface-hub>=0.36.0",
    "iopath>=0.1.10",
    "matplotlib>=3.9.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "peft>=0.17.1",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "scikit-image>=0.24.0",
    "sentence-transformers>=5.1.2",
    "timm>=1.0.22",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "visual-genome>=1.1.1",
    "wandb>=0.22.3",
    "webdataset>=0.2.100",
]
